[project]
name = "calculator-cli"
version = "1.0.0"
description = "A calculator CLI application based on Python and mpmath"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["mpmath>=1.4.1"]

[project.scripts]
calculator = "calculator_cli.cli:main"
c = "calculator_cli.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calculator_cli"]
